@@ -1,16 +1,17 @@
 <?php
 /**
- * Releases a lock on a resource
+ * Release a lock on a resource
  *
  * @package modx
  * @subpackage processors.resource.locks
  */
 
+$released = false;
 if (isset($_POST['id'])) {
     $resource = $modx->getObject('modResource', intval($_POST['id']));
     if ($resource) {
-        $resource->removeLock($modx->user->get('id'));
+        $released = $resource->removeLock($modx->user->get('id'));
     }
 }
 
-return $modx->error->success($resource->get('id'));
+return $modx->error->success('');
