@@ -4,6 +4,13 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added lock stealing processor and updated remove_locks processor.
+- Added steal_lock:true policy attribute to default Resource policy to allow lock stealing permissions by ResourceGroup.
+- modTemplateVar: Fix getValue() on `value` field by storing and verifying the value requested is cached by the same resource.
+- modResource: Add resourceId value to getMany() on modTemplateVar to identify the resource caching a value on the modTemplateVar instance.
+- modX: Set logTarget based on XPDO_CLI_MODE; ECHO for CLI and HTML for non-CLI requests.
+- modX: Add sendError() function to provide customizable, named error pages on FATAL or other critical error situations.
+- modX: Refactored sendForward(), sendErrorPage(), sendUnauthorizedPage() functions to allow an array of options and better handle FATAL errors.
 - modCacheManager now Caches related modContentType data to prevent unnecessary database connection/query on fully cached pages.
 - Fixed problem with modStaticResource truncating the content to the size of the static file by setting the content length header on non-binary content types.
 - Fixed problem with modStaticResource non-binary content types rendering the path to the static file rather than the actual content of the file.
